# tds-p2-data-analyst-agent

./: .gitignore  Dockerfile.sandbox  LICENSE  README.md  debug_imports.py  docker-compose.yml  pyproject.toml  requirements.txt
src/analyst_agent/: data_loader.py  llm_orchestrator.py  llm_parser.py  main.py
src/analyst_agent/configs/: settings.py
src/analyst_agent/utils/: cache.py  code_executor.py  llm_clients.py  validation.py
tests/: test_app.py
